# subs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  rust-toolchain.toml
src/: cli.rs  config.rs  main.rs
src/cmd/: init.rs  mod.rs  new.rs
src/utils/: file.rs  mod.rs
templates/node/: Cargo.node.toml  Cargo.para.toml
templates/node/src/: benchmarking.rs  mock.rs  tests.rs
