[package]
name = "subs"
version = "0.1.0"
authors = ["bingryan <bingryan@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "substrate developer command line tools"
readme = "README.md"
repository = "https://github.com/bingryan/subs"
homepage = "https://github.com/bingryan/subs"
keywords = ["cli", "substrate", "command"]
categories = ["command-line-utilities"]
exclude = [
    "docs/*",
]

include = [
    "templates/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "subs"


[dependencies]
# template
include_dir = "0.6.1"
mustache = "0.9.0"

# console process
console = "0.14"
indicatif = "0.16"
dialoguer = "0.8.0"

clap = "2.33.3"
anyhow = "1.0.43"
config = "0.11.0"
dirs = "3.0.2"

# log
log = "0.4.11"
env_logger = "0.8.2"
yansi = "0.5"
chrono = "0.4.19"

# Serialize, Deserialize
serde = "1.0.128"
serde_derive = "1.0.128"
